@@ -49,7 +49,7 @@
       </fieldset>
       <div class="buttons">
         <input type="submit" name="save"
-               value="${dgettext('acct_mgr', 'Save')}" />
+               value="${dgettext('acct_mgr', 'Apply changes')}" />
       </div>
     </form>
   </body>
